@@ -1,3 +1,8 @@
+2008-05-23 Chris Morley
+
+	* include/openbabel/obconversion.h, src/obconversion.cpp:
+	Add OBConversion::OpenInAndOutFiles to aid scripting
+
 2008-05-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
 	* src/mol.cpp: SetTorsion(), move j=*i out of this for loop:
